feat: make like a real project i guess

--- a/ape-config.yaml
+++ b/ape-config.yaml
@@ -1,9 +1,14 @@
 plugins:
   - name: hardhat
+  - name: etherscan
+  - name: alchemy
 
 ethereum:
+  default_network: mainnet-fork
   local:
     default_provider: hardhat
+  mainnet:
+    default_provider: alchemy
 
 solidity:
   optimize: false
